# JPMorgan-MLCOE-challenge

./: README.md  Real-experiment-ModeCanada.ipynb  Real-experiment-SwissMetro.ipynb  Synthetic-data-generation.ipynb
Data/: Synthetic_12-4-10_Test.csv
DeepHalo/: Featured_DeepHalo.py  __init__.py
Part1/: Comparison-with-baseline.ipynb  Synthetic-experiment.ipynb  Tests.ipynb  pyproject.toml  setup.cfg
Part1/Data/: Synthetic_12-4-40_Train.csv
Part1/DeepHalo/: DeepHalo_choice_learn.py  Featureless_DeepHalo.py
Part2/: Joint_Bayesian_Sparse_DeepHalo.ipynb  Lu_Bayesian_Sparse_Demo.ipynb  Lu_Bayesian_Sparse_rwmh.ipynb  Lu_Bayesian_Sparse_tmh.ipynb  README.md  Tests.ipynb  setup.cfg
Part2/BayesianSparseDeepHalo/: BLP.py  DeepHalo.py  DeepHalo_MCEM_Core.py  GenerateData.py  LuSparseRandomLogit.py  __init__.py
Part2/Experiments/Joint Lu Zhang results/: Bayesian_sparse_deephalo_results.csv
Part2/Experiments/Lu DGP results/: table_DGP1.csv  table_DGP2.csv  table_DGP3.csv  table_DGP4.csv
Part2/Experiments/Lu DGP results tmh/: table_DGP1.csv  table_DGP2.csv  table_DGP3.csv  table_DGP4.csv
Part2/tests/: Bayesian_Sparse_Deephalo_Tests.py  test_BLP.py  test_DeepHalo_MCEM_Core.py  test_GenerateData.py  test_LuSparseRandomLogit.py
tests/: DeepHalo_Tests.py  __init__.py
