[metadata]
name = BayesianSparseDeepHalo
version = 0.1.0
description = Bayesian Sparse DeepHalo choice model of Lu(2025) and Zhang(2025)
author = Amirhossein Javaheri
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    numpy>=1.24
    tensorflow>=2.12
    scipy>=1.10
    choice-learn>=0.2


